<resources>
    <string name="app_name">GameLogin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title_text">CrossPuzzle</string>
    <string name="username_label">UserName</string>
    <string name="password_label">Password</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_underline">Create Account</string>
    <string name="background_color">#eeeeee</string>
    <string name="create_account">Create Account</string>
    <string name="darker_selected_color">#cf0385b5</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="example_text">text text text text text text text text text text text text text text</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password_hint">Password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
