<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:animateLayoutChanges="true"
        android:background="@string/background_color"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:text="@string/create_account"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@string/darker_selected_color"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/form_layout"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@drawable/white_object"
                android:inputType="textPersonName"
                android:hint="@string/full_name"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:background="@drawable/white_object"
                android:inputType="textEmailAddress"
                android:hint="@string/email_address"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_object"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>

        </LinearLayout>

        <TextView
            android:id="@+id/signup_msg"
            android:text="@string/example_text"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="20sp"
            />

    </LinearLayout>
</RelativeLayout>