<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/splash_bg" >

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:gravity="center_vertical|right">


        <TextView
            android:id="@+id/login_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.70"
            android:gravity="left"
            android:text="@string/login_title_text"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dip"
            android:weightSum="1"
            android:gravity="right">

            <TextView
                android:id="@+id/username_label_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="7dip"
                android:text="@string/username_label"
                android:textSize="12sp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/content_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:singleLine="true"
                android:inputType="text"
                android:background="@drawable/selector_white_text_field"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dip"
            android:weightSum="1"
            android:gravity="right">

            <TextView
                android:id="@+id/password_label_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginRight="7dip"
                android:text="@string/password_label"
                android:textSize="12sp"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/pass_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.96"
                android:singleLine="true"
                android:inputType="textPassword"
                android:background="@drawable/selector_white_text_field"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="right">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:layout_marginTop="10dip"
                android:text="@string/login_button_text"
                android:textSize="26sp"
                android:background="@drawable/selector_white_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_new"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:weightSum="1"
            android:gravity="right">

            <TextView
                android:id="@+id/register_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/create_account_underline"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:focusableInTouchMode="false" />

        </LinearLayout>

</LinearLayout>

</RelativeLayout>
